# horreum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
doc/: instrukcja.md
horreum/: __init__.py  calibration.py  cli.py  db.py  exif.py  expr.py  filter_engine.py  grouper.py  hashing.py  import_fitsmirror.py  lineage.py  macro.py  naming.py  pivot.py  presence.py  projection.py  repo.py  resolver.py  safety.py  scan.py  volumes.py  writeback.py
horreum/gui/: __init__.py  __main__.py  app.py  facet_model.py  facets.py  grid.py  i18n.py  i18n_catalog.py  map_view.py  mapproj.py  pipeline.py  portfolio.py  progress.py  projection_dialog.py  queries.py  rows.py  tasks.py  theme.py
horreum/gui/assets/: PROVENANCE.md  ne_110m_land.json
horreum/resolve/: __init__.py  _coerce.py  _text.py  cameras.py  catalog.py  filters.py  frames.py  headers.py  objects.py  observatory.py  recipe.py  regions.py  solar.py  telescopes.py
horreum/resolve/data/: __init__.py  catalog_xref.json  master_paths.json  regions.json
horreum/schema/: __init__.py
horreum/schema/migrations/: 0001_initial.sql  0002_initial.sql  0003_writeback.sql  0004_observatory.sql  0005_rename.sql  0006_unreadable.sql  0007_backup_hdu_nullable.sql  0008_calibration.sql  0009_calibration_lineage.sql  0010_kind_source.sql  __init__.py
packaging/: build.ps1  cli_entry.py  horreum-installer.nsi  horreum-onefile.spec  horreum.spec  make-installer.ps1
scripts/: acceptance_s5.py
tests/: conftest.py  fixture_s8.py  test_calibration.py  test_cameras.py  test_catalog.py  test_cli_project.py  test_cli_rename.py  test_db.py  test_exif.py  test_expr.py  test_filters.py  test_frames.py  test_grid_core.py  test_grouper.py  test_gui_app.py  test_gui_app_object.py  test_gui_app_observatory.py  test_gui_grid.py  test_gui_isolation.py  test_gui_mainwindow.py  test_gui_pipeline.py  test_gui_progress.py  test_gui_projection.py  test_gui_queries.py  test_gui_queries_object.py  test_gui_rows.py  test_hashing.py  test_headers.py  test_i18n.py  test_import_fitsmirror.py  test_lineage.py  test_macro.py  test_mapproj.py  test_objects.py  test_observatory.py  test_presence.py  test_projection.py  test_recipe.py  test_regions.py  test_rename.py  (+13 more)
