[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "horreum"
version = "0.0.1"
description = "Menedżer biblioteki astrofoto deep-sky (suby i mastery) — baza = autorytet, sha1 = tożsamość. FITS -> SQLite, model osi (teleskop × kamera)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Zdzisław »Abo« Sabat" }]
# Rdzeń plastra B jest BEZ zależności runtime (stdlib: sqlite3, hashlib, ast, json,
# importlib.resources) — żeby bramka izolowanego clone'a (§5.11) była szybka i czysta.
# astropy (czytnik nagłówka FITS) dochodzi z modułem skanu (kolejny krok), nie tu.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
gui = ["PySide6>=6.5"]                     # PySide6 GUI — przyszłość, poza plastrem B

[project.scripts]
horreum = "horreum.cli:main"

[tool.setuptools.packages.find]
include = ["horreum*"]

[tool.setuptools.package-data]
# Te assety MUSZĄ trafić do wheela — inaczej non-editable `pip install .` (bramka clone'a)
# nie znajdzie migracji ani uniwersaliów katalogowych w runtime.
"horreum.schema.migrations" = ["*.sql"]
"horreum.resolve.data" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
